--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Silly gentrification model for Fall 2015 Hackathon.",
   "scripts": {
-    "test": "grunt travis"
+    "test": "grunt test"
   },
   "dependencies": {
     "d3": "^3.4.13",
@@ -13,7 +13,7 @@
     "rbush": "^1.3.4"
   },
   "devDependencies": {
-    "jshint": "2.5.x",
+    "chai": "1.9.1",
     "grunt": "~0.4.2",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "0.4.x",
@@ -21,16 +21,17 @@
     "grunt-contrib-less": "~0.11.0",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": ">=0.3.1",
-    "grunt-mocha": "~0.4.11",
     "grunt-karma": "0.8.3",
-    "matchdep": "~0.3.0",
-    "chai": "1.9.1",
-    "mocha": "~1.14.0",
-    "sinon": "1.10.3",
+    "grunt-mocha": "~0.4.11",
+    "http-server": "^0.7.3",
+    "jshint": "2.5.x",
     "karma": "0.12.16",
-    "karma-phantomjs-launcher": "0.1.4",
     "karma-mocha": "^0.1.4",
-    "karma-mocha-reporter": "0.2.7"
+    "karma-mocha-reporter": "0.2.7",
+    "karma-phantomjs-launcher": "0.1.4",
+    "matchdep": "~0.3.0",
+    "mocha": "~1.14.0",
+    "sinon": "1.10.3"
   },
   "repository": {
     "type": "git",
